<resources>
    <string name="app_name">NexusTweaks</string>

    <!-- Profile Names -->
    <string name="prof0">Automatic</string>
    <string name="prof1">Balance</string>
    <string name="prof2">Battery</string>
    <string name="prof3">Gaming</string>
    <string name="prof4">Support</string>

    <!-- Support Strings -->
    <string name="no_spectrum_support_dialog_title">No Spectrum support detected</string>
    <string name="no_spectrum_support_dialog_message">Please contact your kernel dev and ask them to add Spectrum support</string>
    <string name="no_root_detected_dialog_title">No root detected</string>
    <string name="no_root_detected_dialog_message">Root access was not found or denied. Spectrum needs root to set profiles.</string>
    <string name="custom_descriptions_fail_text">Storage permission denied, Couldn\'t look for custom descriptions</string>
  
    <!-- Default Profile Descriptions -->
    <string name="profdesc0">This Mode Automatically Detects App and Apply Profile according to need .</string>
    <string name="profdesc1">This Mode Aims To Improve the Performance while maintaining fantastic battery .</string>
    <string name="profdesc2">This Mode Reduces performance In order to achieve long-lasting battery backup .</string>
    <string name="profdesc3">This Mode Unlocks maximum performance of device to improve gaming experience.</string>
    <string name="profdesc4">Tap and join our support group for update and help incase you get a problem</string>
    <string name="profdesc5">Device : devi</string>
    <string name="profdesc6">Android Version : andro</string>
    <string name="profdesc7">Processor : soc</string>
    <string name="profdesc8">Selinux : geten</string>

    <!-- Profile Loader -->
    <string name="aboutLoader">Woah there!</string>
    <string name="loaderDesc">Looks like you\'ve found the hidden EXKM Profile loader! While profile loading was originally planned to be a premium feature, I\'ve decided to include it as an easter egg. Others may be hidden in Spectrum, so happy hunting!</string>
    <string name="cancelText">Cancel</string>
    <string name="confirmText">OK</string>
    <string name="profileConfirm">Are you sure you want to load this file?</string>
    <string name="fileSelect">Select a File</string>
    <string name="bootText">Apply profile on boot</string>
    <string name="profileMenu">Profile loader</string>

    <!-- Profile Tile -->
    <string name="profileTile">Profile</string>

    <!-- Shared Preferences -->
    <string name="profile" translatable="false" />
    <string name="profilePath" translatable="false" />
    <string name="firstFind" translatable="false">true</string>
    <string name="loadOnBoot" translatable="false">false</string>
</resources>
